minijinja/tests/snapshots/test_templates__vm@err_in_include.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{% for a in seq %}\n  This fails in the include: {% include \"a_plus_b.txt\" %}\n{% endfor %}"
info:
  b: []
  seq:
    - 1
    - 2
    - 3
input_file: minijinja/tests/inputs/err_in_include.txt
---
!!!ERROR!!!

Error {
    kind: BadInclude,
    detail: "error in \"a_plus_b.txt\"",
    name: "err_in_include.txt",
    line: 2,
    source: Error {
        kind: InvalidOperation,
        detail: "tried to use + operator on unsupported types number and sequence",
        name: "a_plus_b.txt",
        line: 1,
    },
}

could not render include: error in "a_plus_b.txt" (in err_in_include.txt:2)
----------------------------- err_in_include.txt ------------------------------
   1 | {% for a in seq %}
   2 >   This fails in the include: {% include "a_plus_b.txt" %}
     i                                 ^^^^^^^^^^^^^^^^^^^^^^ could not render include
   3 | {% endfor %}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Referenced variables: {
    a: 1,
    loop: Loop {
        index0: 0,
        index: 1,
        length: 3,
        revindex: 3,
        revindex0: 2,
        first: true,
        last: false,
        depth: 1,
        depth0: 0,
    },
    seq: [
        1,
        2,
        3,
    ],
}
-------------------------------------------------------------------------------

caused by: invalid operation: tried to use + operator on unsupported types number and sequence (in a_plus_b.txt:1)
-------------------------------- a_plus_b.txt ---------------------------------
   1 > This template adds b to a: {{ a + b }}
     i                               ^^^^^ invalid operation
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Referenced variables: {
    a: 1,
    b: [],
}
-------------------------------------------------------------------------------

